exp_3/y.output
Grammaire

    0 $accept: e $end

    1 e: e1

    2 e1: e1 PLUS e2
    3   | e1 MOINS e2
    4   | e2

    5 e2: e2 MULT e3
    6   | e2 DIV e3
    7   | e3

    8 e3: PO e1 PF
    9   | ENTIER


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    PLUS (258) 2
    MOINS (259) 3
    MULT (260) 5
    DIV (261) 6
    PO (262) 8
    PF (263) 8
    ENTIER (264) 9


Non-terminaux, suivis des règles où ils apparaissent

    $accept (10)
        à gauche: 0
    e (11)
        à gauche: 1
        à droite: 0
    e1 (12)
        à gauche: 2 3 4
        à droite: 1 2 3 8
    e2 (13)
        à gauche: 5 6 7
        à droite: 2 3 4 5 6
    e3 (14)
        à gauche: 8 9
        à droite: 5 6 7


État 0

    0 $accept: . e $end

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e   aller à l'état 3
    e1  aller à l'état 4
    e2  aller à l'état 5
    e3  aller à l'état 6


État 1

    8 e3: PO . e1 PF

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e1  aller à l'état 7
    e2  aller à l'état 5
    e3  aller à l'état 6


État 2

    9 e3: ENTIER .

    $défaut  réduction par utilisation de la règle 9 (e3)


État 3

    0 $accept: e . $end

    $end  décalage et aller à l'état 8


État 4

    1 e: e1 .
    2 e1: e1 . PLUS e2
    3   | e1 . MOINS e2

    PLUS   décalage et aller à l'état 9
    MOINS  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 1 (e)


État 5

    4 e1: e2 .
    5 e2: e2 . MULT e3
    6   | e2 . DIV e3

    MULT  décalage et aller à l'état 11
    DIV   décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 4 (e1)


État 6

    7 e2: e3 .

    $défaut  réduction par utilisation de la règle 7 (e2)


État 7

    2 e1: e1 . PLUS e2
    3   | e1 . MOINS e2
    8 e3: PO e1 . PF

    PLUS   décalage et aller à l'état 9
    MOINS  décalage et aller à l'état 10
    PF     décalage et aller à l'état 13


État 8

    0 $accept: e $end .

    $défaut  accepter


État 9

    2 e1: e1 PLUS . e2

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e2  aller à l'état 14
    e3  aller à l'état 6


État 10

    3 e1: e1 MOINS . e2

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e2  aller à l'état 15
    e3  aller à l'état 6


État 11

    5 e2: e2 MULT . e3

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e3  aller à l'état 16


État 12

    6 e2: e2 DIV . e3

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e3  aller à l'état 17


État 13

    8 e3: PO e1 PF .

    $défaut  réduction par utilisation de la règle 8 (e3)


État 14

    2 e1: e1 PLUS e2 .
    5 e2: e2 . MULT e3
    6   | e2 . DIV e3

    MULT  décalage et aller à l'état 11
    DIV   décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 2 (e1)


État 15

    3 e1: e1 MOINS e2 .
    5 e2: e2 . MULT e3
    6   | e2 . DIV e3

    MULT  décalage et aller à l'état 11
    DIV   décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 3 (e1)


État 16

    5 e2: e2 MULT e3 .

    $défaut  réduction par utilisation de la règle 5 (e2)


État 17

    6 e2: e2 DIV e3 .

    $défaut  réduction par utilisation de la règle 6 (e2)
